--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" href="<%= posts_path %>">Articles</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= categories_path %>">Catégories</a>
+        </li>
       </ul>
     </div>
   </nav>
